# auto_civitai_rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml
src/: civitai_image_struct.rs  config.rs  dataset.rs  main.rs  utilities.rs
src/utilities/: config.rs  prompt_utils.rs
src/utilities/prompt_utils/: image_data.rs  preprocess.rs
src/utilities/prompt_utils/image_data/: item_data.rs  meta_data.rs  stats_data.rs
