[package]
name = "auto_civitai_rs"
version = "0.1.0"
edition = "2021"
description = "Civitai with Rust"
repository = "https://github.com/alpertunga-bile/auto_civitai_rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = {version = "0.46.0", features = ["parquet"]}
serde = {version = "1.0.218", features = ["derive"]}
serde_json = "1.0.138"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-macros = "2.5.0"
futures = "0.3.31"

[profile.release]
opt-level = 2
debug = false
lto = true
strip = true
debug-assertions = false
