[package]
name = "auto_civitai_rs"
version = "0.1.3"
edition = "2021"
description = "Civitai with Rust"
repository = "https://github.com/alpertunga-bile/auto_civitai_rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.50.0", features = ["parquet"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
reqwest = { version = "0.12.22", features = ["json"] }
tokio = { version = "1.47.1", features = [
    "time",
    "rt",
    "macros",
    "rt-multi-thread",
] }
rand = "0.9.2"
regex = "1.11.1"
kdam = "0.6.3"

[profile.release]
codegen-units = 1
opt-level = 3
strip = "symbols"
lto = true
overflow-checks = true
